show alert box when occur error

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       </div>
       <button id="submit" class="btn btn-primary">Submit</button>
     </div>
+    <br/>
+    <div id="alert-box"></div>
   </div>
 
   <script src="https://cdn.rawgit.com/github/fetch/master/fetch.js"></script>
