--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <body>
   <div class="container">
     <h2>Gist HTML Preview</h2>
+    <p class="lead">If `File Name` is blank, it would preview index.html or the first file as default.</p>
     <div class="form-inline" role="form">
       <div class="form-group">
         <label for="gist_id">https://gistpreview.github.io/?</label>
@@ -38,7 +39,7 @@
       </div>
       <div class="form-group">
         <label for="file_name">/</label>
-        <input type="text" class="form-control input-sm" id="file_name" placeholder="File Name">
+        <input type="text" class="form-control input-sm" id="file_name" placeholder="File Name (optional)">
       </div>
       <button id="submit" class="btn btn-primary">Submit</button>
     </div>
