update example gist link, and description

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <div id="main" class="container hide">
     <h2>Gist HTML Preview</h2>
-    <p class="lead">If `File Name` is blank, it would preview index.html or the first file as default.</p>
+    <p class="lead">If <ins>File Name</ins> is empty, it will preview <ins>index.html</ins> or <ins>the first file</ins> as default.</p>
     <div class="form-inline" role="form">
       <div class="form-group">
         <label for="gist_id">https://gistpreview.github.io/?</label>
