--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <title>Gist HTML Preview</title>
-  <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-  <meta http-equiv='Content-Type' content='text/html; charset=utf8'/>
-  <meta name='apple-mobile-web-app-capable' content='yes'/>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf8"/>
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="google-site-verification" content="8Wp1LLZkcbUY-3pg28dx2VFqTrzdj0wy4c2-QyVPpZ8"/>
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
